--- a/app/src/main/res/layout/fragment_recipient.xml
+++ b/app/src/main/res/layout/fragment_recipient.xml
@@ -35,6 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <Spinner
+                    android:id="@+id/bank_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:prompt="@string/bank_prompt"
