--- a/app/src/main/res/layout/fragment_confirmation.xml
+++ b/app/src/main/res/layout/fragment_confirmation.xml
@@ -24,8 +24,8 @@
             android:layout_height="wrap_content">
             <ImageView
                 android:layout_gravity="center"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:src="@drawable/ic_check_circle"
                 />
 
@@ -33,16 +33,37 @@
                 android:id="@+id/name_receiver"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Name\t: ?"
+                android:text="Sent to : "
                 android:textSize="20dp"
+                android:textAlignment="center"
+                android:layout_margin="5dp"/>
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/account_number"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Account Number : "
+                android:textSize="20dp"
+                android:textAlignment="center"
                 android:layout_margin="5dp"/>
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/amount_transfer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Amount\t: ?"
+                android:text="Rp. "
                 android:textSize="20dp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:layout_margin="5dp"/>
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/bank_receiver"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Bank : "
+                android:textSize="20dp"
+                android:textAlignment="center"
                 android:layout_margin="5dp"/>
 
             <com.google.android.material.button.MaterialButton
@@ -51,7 +72,8 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:text="DONE"
-                android:layout_margin="30dp">
+                android:textSize="20dp"
+                android:layout_margin="15dp">
             </com.google.android.material.button.MaterialButton>
         </LinearLayout>
 
